# MatterGraph

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  _workspace_meta.py  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  dataset_connector.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  lint.yml  tests.yml
apps/examples-dashboard/: README.md
apps/web/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: main.tsx  styles.css
cookbooks/sql/lematerial/: 01_schema_discovery.sql  02_functional_coverage.sql  03_element_system_counts.sql  04_formula_duplicates.sql  05_energy_per_site_caveats.sql  06_force_quality_checks.sql  README.md  (+4 more)
data/: README.md
data/demo/: lemat_bulk_sample.json  materials_sample.jsonl  properties_sample.csv
data/schemas/: material.schema.json  property.schema.json  simulation.schema.json
docs/: architecture.md  connectors.md  data-model.md  examples.md  getting-started.md  index.md  scoring.md  simulation-workflows.md
docs/integrations/: lematerial.md
examples/: 01_ingest_materials_project.py  02_ingest_jarvis.py  03_normalize_material_records.py  04_build_crystal_graph.py  05_rank_lightweight_materials.py  06_compare_candidates.ipynb  07_run_ase_relaxation.py
examples/lematerial/: 01_schema_report.py  02_candidate_slice_report.py  03_graph_export.py
examples/underwater-drone-screening/: README.md  constraints.yaml  scorecard.py  shortlist_example.csv
scripts/: create_db.py  ingest_jarvis.py  ingest_materials_project.py  ingest_oqmd.py  run_local_api.sh  seed_demo_data.py
tests/integration/: test_demo_jsonl.py
(+8 files in other folders)
